# nominal-drift

./: .gitignore  README  README.md  config.example.yaml  launch_nominal_drift.bat  launch_nominal_drift.sh  nominal_drift_gui.spec  pyproject.toml
docs/: arrhenius_sources.md
nominal_drift/: __init__.py
nominal_drift/cli/: __init__.py  main.py
nominal_drift/core/: __init__.py  orchestrator.py  session.py  tool_router.py
nominal_drift/crystal/: __init__.py
nominal_drift/datasets/: __init__.py  adapters.py  crystal_search.py  dft_bridge.py  ingest.py  matbench_bridge.py  mp_time_split_bridge.py  pymatgen_bridge.py  schema.py  status.py
nominal_drift/datasets/downloaders/: __init__.py  base_downloader.py  carbon24_downloader.py  mp20_downloader.py  mpts52_downloader.py  perov5_downloader.py
nominal_drift/demo/: __init__.py  run_diffusion_demo.py
nominal_drift/gui/: __init__.py  app.py  forms.py  launcher.py
nominal_drift/gui/components/: result_panel.py  thermodynamic_panel.py
nominal_drift/gui/pages/: animation_page.py  chat_page.py  dataset_page.py  diffusion_page.py  experiment_db_page.py  reports_page.py  sensitization_page.py
nominal_drift/knowledge/: __init__.py  experiment_store.py  literature_retrieval.py  literature_store.py  retrieval.py  schema_db.py
nominal_drift/llm/: __init__.py  client.py  extractor.py  narration.py
nominal_drift/llm/prompts/: narrate_diffusion.j2
nominal_drift/reports/: __init__.py  report_builder.py
nominal_drift/schemas/: __init__.py  composition.py  diffusion_output.py  ht_schedule.py
nominal_drift/science/: __init__.py  coupled_diffusion.py  diffusion_engine.py  doe_planner.py  sensitization_model.py  sink_models.py  supported_elements.py  thermodynamics.py
nominal_drift/science/constants/: arrhenius.json
nominal_drift/templates/: __init__.py  base.py  factory.py  ingest_templates.py  report_templates.py  run_templates.py  serializer.py
nominal_drift/viz/: __init__.py  animator.py  mechanism_animator.py  microstructure_animator.py  profile_plotter.py  risk_map.py  species_styles.py
pytest-cache-files-dy2z9z5c/v/cache/: nodeids
tests/: __init__.py
tests/integration/: __init__.py  test_showcase_workflow.py
tests/unit/: __init__.py  test_adapters.py  test_adapters_cif.py  test_animator.py  test_coupled_diffusion.py  test_crystal_search.py  test_dataset_status.py  test_dft_bridge.py  test_diffusion_engine.py  test_doe_planner.py  test_downloaders.py  test_experiment_store.py  test_ingest.py  test_literature_store.py  test_llm_client.py  test_matbench_bridge.py  test_mechanism_animator.py  test_microstructure_animator.py  test_mp_time_split_bridge.py  test_narration.py  test_orchestrator.py  test_preset_loader.py  test_profile_plotter.py  test_pymatgen_bridge.py  test_report_builder.py  test_retrieval.py  test_risk_map.py  test_schemas.py  test_sensitization_model.py  test_sink_models.py  test_species_styles.py  test_supported_elements.py  test_templates.py  test_thermodynamics.py  test_tool_router.py
tests/unit/test_datasets/: test_schema.py
